# AdventOfCode2021

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
AOC2021/: AOC2021.cpp  AOC2021.h  CMakeLists.txt
AOC2021/Day01/: CMakeLists.txt  Day01.cpp  Day01.h
AOC2021/Helper/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  Days.cpp  Days.h
